Fix up icon alignment inside module headings

--- a/resources/Evelution.css
+++ b/resources/Evelution.css
@@ -2361,6 +2361,10 @@ border-top-right-radius:0;
 	
 }
 
+.evelution-rail-wrapper .evelution-module h2 .cpe-icon {
+	vertical-align:top;
+}
+
 .evelution-module .cpe-button.is-full-width {
 	--secondary-button-background-color:var(--canvas-background-color);
 	align-self:stretch;
